finished fixing the issues with alignment

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,13 +1,22 @@
 :root {
-  --primary-clr: #7e96cb;
-  --text-clr: #022adc;
+  --primary-clr: coral;
+  --text-clr: coral;
 }
 
 body {
-  background-image: url('../images/todo.jpg');
+  /* background-image: url('../images/todo.jpg'); */
   background-size: cover;
   font-family: 'Itim', cursive;
 }
+
+nav {
+  background-color: coral;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+  font-size: 30px;
+}
+
 
 .container {
   height: 130vh;
@@ -18,30 +27,32 @@ body {
   justify-content: space-evenly;
   width: 70%;
   margin: 0 auto;
-  color: #333;
-  background: rgba(255, 255, 255, 0.7);
+  color: white;
+  background: rgb(48, 48, 114);
   padding: 10px;
   position: relative;
 }
 
 .add-btn {
-  border: 1px solid #333;
-  border-radius: 50%;
+  border: 1px solid coral;
+  border-radius: 5%;
   position: absolute;
-  left: 0;
-  top: 0;
+  left: 500px;
+  top: 10px;
   padding: 7px 14px;
   font-size: 20px;
   background-color: var(--text-clr);
   color: #fff;
   cursor: pointer;
+
 }
 
 .app-name {
   text-align: center;
   font-family: 'Itim', cursive;
-  font-size: 102px;
+  font-size: 70px;
   color: var(--primary-clr);
+  font-family: monospace;
 }
 
 .project-ctn {
@@ -62,7 +73,7 @@ body {
 
 .project-form input,
 .form-input {
-  border: 1px solid #333;
+  border: 1px solid white;
   padding: 10px;
   border-radius: 10px;
 }
